minor changes for better integration of the memo function

--- a/views/comdash.ejs
+++ b/views/comdash.ejs
@@ -17,7 +17,7 @@
     <ul class="nav">
       <li><a href="http://localhost:3000">Home</a></li>
       <li><a href="#">My Communities</a></li>
-      <li><a href="#">Add Memo</a></li>
+      <li><a href="../../memo">Add Memo</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
 </div>
