--- a/views/memo.ejs
+++ b/views/memo.ejs
@@ -1,2 +1,30 @@
 <html>
+<head>
+<title></title>
+<script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
+<link href="https://cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
+<link href= "/styles/memo.css" rel="stylesheet">
+<link href= "/styles/basic.css" rel="stylesheet">
+<link href="/styles/dash.css"  rel="stylesheet">
+<link href="/styles/buttons.css" rel="stylesheet">
+</head>
+<body>
+<div class="menu" onmouseover="chop(0)" onmouseout="chop(1)">
+    <div class="title">MENU</div>
+    <ul class="nav">
+      <li><a href="http://localhost:3000">Home</a></li>
+      <li><a href="#">My Communities</a></li>
+      <li><a href="../../memo">Add Memo</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+</div>
+<script>
+function chop(opac) {
+	document.getElementsByClassName('title')[0].style.opacity = opac;
+	document.getElementsByClassName('nav')[0].style.opacity= Math.abs(1-opac);
+}
+</script>
+</body>
 </html>
