--- a/views/memo.ejs
+++ b/views/memo.ejs
@@ -9,9 +9,10 @@
 <link href= "/styles/basic.css" rel="stylesheet">
 <link href="/styles/dash.css"  rel="stylesheet">
 <link href="/styles/buttons.css" rel="stylesheet">
+<script src="scripts/cards.js"></script>
 </head>
 <body>
-<div class="menu" onmouseover="chop(0)" onmouseout="chop(1)">
+<div class="menu leftnav" onmouseover="chop(0)" onmouseout="chop(1)">
     <div class="title">MENU</div>
     <ul class="nav">
       <li><a href="http://localhost:3000">Home</a></li>
@@ -20,6 +21,19 @@
       <li><a href="#">Contact</a></li>
     </ul>
 </div>
+<div class="newMemoText">sasdasdasd</div>
+<div class="memos" id="stick-box">asdasdasdas
+asdasd
+asdasdasdasd
+asd
+asd
+asdas
+das
+das
+d
+asd
+<br><br>
+asdasdasd</div>
 <script>
 function chop(opac) {
 	document.getElementsByClassName('title')[0].style.opacity = opac;
