--- a/styles/memo.css
+++ b/styles/memo.css
@@ -24,6 +24,7 @@ body{
 	grid-column: 2/3;
 	grid-row:1/2;
 	transition: 0.3s;
+  background-color:#b5b5b5;
 }
 
 .memos{
@@ -31,6 +32,7 @@ body{
 	grid-row: 2/4;
 	transition: 0.3s;
 	overflow-y:scroll;
+  background-color:#b5b5b5;
 }
 
 .notels{
